--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <button id="connect">Connect</button>
-    <button id="on">Power On</button>
-    <button id="off">Power Off</button>
-    <button id="set_temp">Set Temperature</button>
+    <button class="auth_control" id="on" disabled>Power On</button>
+    <button class="auth_control" id="off" disabled>Power Off</button>
+    <button class="auth_control" id="set_temp" disabled>Set Temperature</button>
     <input min="40" max="212" type="number" id="temp" value="100">
-    <label id="temp_unit">Celcius</label>
+    <label id="temp_unit">°C</label>
 </body>
