--- a/index.html
+++ b/index.html
@@ -10,17 +10,28 @@
 <body>
     <div class="connect">
         <p class="ekg">EKG+</p>
-        <button id="connect">Connect</button>
+        <button id="connect" class="">Connect</button>
     </div>
-    <div class="controls">
-        <div class="power-btns">
+    <div class="controls bluetooth-connected">
+        <!-- <div class="power-btns">
             <button class="auth_control" id="on" disabled>ON</button>
             <button class="auth_control" id="off" disabled>OFF</button>
+        </div> -->
+        <div class="onoffswitch">
+            <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" tabindex="0">
+            <label class="onoffswitch-label" for="myonoffswitch">
+                <span class="onoffswitch-inner"></span>
+                <span class="onoffswitch-switch"></span>
+            </label>
         </div>
         <div class="set-temp">
-            <button class="auth_control" id="set_temp" disabled>Set</button>
-            <input min="40" max="212" type="number" id="temp" value="100">
-            <label id="temp_unit">°C</label>
+            <!-- <button class="auth_control" id="set_temp" disabled>Set</button> -->
+            <input min="40" max="212" type="number" id="current_temp" value="100">
+            <div class="temp_units">
+                <label class="temp_unit">°C</label>
+                <label class="f-temp_unit temp_unit">°F</label>
+            </div>
+            
         </div>
     </div>
 </body>
