--- a/index.html
+++ b/index.html
@@ -22,24 +22,24 @@
                 <!-- <button class="auth_control" id="set_temp" disabled>Set</button> -->
                 <input min="40" max="212" type="number" id="temp" placeholder="100" class="temp-display">
                 <div class="temp_units">
-                    <label for="temp" class="temp_unit">°C</label>
-                    <label for="temp" class="f-temp_unit temp_unit">°F</label>
+                    <label for="temp" class="bold-temp_unit c-temp_unit">°C</label>
+                    <label for="temp" class="f-temp_unit">°F</label>
                 </div>
             </div>
             <div class="current-temp temp-div">
                 <!-- <button class="auth_control" id="set_temp" disabled>Set</button> -->
-                <span class="temp-display-small">--</span>
+                <span id="current_temp" class="temp-display-small"></span>
                 <div class="temp_units temp_units-small">
-                    <span class="temp_unit">°C</span>
-                    <span class="f-temp_unit temp_unit">°F</span>
+                    <span class="bold-temp_unit c-temp_unit">°C</span>
+                    <span class="f-temp_unit">°F</span>
                 </div>
             </div>
             <div class="target-temp temp-div">
                 <!-- <button class="auth_control" id="set_temp" disabled>Set</button> -->
-                <span class="temp-display-small">--</span>
+                <span id="target_temp" class="temp-display-small"></span>
                 <div class="temp_units temp_units-small">
-                    <span class="temp_unit">°C</span>
-                    <span class="f-temp_unit temp_unit">°F</span>
+                    <span class="bold-temp_unit c-temp_unit">°C</span>
+                    <span class="f-temp_unit">°F</span>
                 </div>
             </div>
             <div class="onoffswitch">
