--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p class="ekg">EKG+</p>
         <button id="connect" class="">Connect</button>
     </div>
-    <div class="controls bluetooth-connected">
+    <div class="controls">
         <!-- <div class="power-btns">
             <button class="auth_control" id="on" disabled>ON</button>
             <button class="auth_control" id="off" disabled>OFF</button>
