--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <link rel="stylesheet" href="main.css">
+    <link rel="icon" href="assets/icon-512.png">
     <script src="main.js"></script>
-    <title>Fellow</title>
+    <title>Fellow Stagg EKG+</title>
 </head>
 <body>
     <div class="connect">
