--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" href="assets/icon-512.png">
+    <link rel="icon" href="assets/icon.svg">
     <script src="main.js"></script>
     <title>Fellow Stagg EKG+</title>
 </head>
