--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="assets/icon.svg">
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="assets/icon.svg">
     <script src="main.js"></script>
     <title>Fellow Stagg EKG+</title>
 </head>
